# tgo

./: .env.dev.example  .env.example  .gitignore  AGENTS.md  COMMIT_MSG.txt  LICENSE  LICENSE_CN  Makefile  README.md  README_CN.md  README_JP.md  README_RU.md  README_TC.md  bootstrap.sh  deploy.sh  docker-compose.cn.yml  docker-compose.dev.yml  docker-compose.source.yml  docker-compose.tools.yml  docker-compose.yml  tgo.sh  tool.sh
docs/: CHANGES_SUMMARY_V2.md  DOMAIN_CONFIG_GUIDE.md  DOMAIN_CONFIG_QUICK_REFERENCE.md  GET_REAL_IP.md
docs-site/: docusaurus.config.ts  package.json  sidebars.ts
envs.docker/: tgo-ai.env  tgo-api.env  tgo-plugin-runtime.env  tgo-web.env
repos/: README.md
repos/tgo-ai/: .env.example  pyproject.toml
repos/tgo-ai/app/: config.py  dependencies.py  main.py
repos/tgo-ai/app/api/v1/: __init__.py  agents.py  chat.py  llm_models.py  llm_providers.py  tools.py
repos/tgo-ai/app/json_render/: schema_manager.py
repos/tgo-ai/app/models/: __init__.py  agent.py  internal.py  llm_model.py  llm_provider.py  project.py  streaming.py  team.py  tool.py
repos/tgo-ai/app/runtime/supervisor/: config.py
repos/tgo-ai/app/runtime/supervisor/agents/: __init__.py  builder.py  runner.py  system_agents.py
repos/tgo-ai/app/runtime/supervisor/application/: service.py
repos/tgo-ai/app/runtime/supervisor/exceptions/: __init__.py
repos/tgo-ai/app/runtime/supervisor/infrastructure/: services.py
repos/tgo-ai/app/runtime/supervisor/interfaces/: __init__.py
repos/tgo-ai/app/runtime/supervisor/models/: __init__.py
repos/tgo-ai/app/runtime/supervisor/orchestration/: __init__.py
repos/tgo-ai/app/runtime/supervisor/prompts/: team_instructions.md
repos/tgo-ai/app/runtime/supervisor/streaming/: workflow_events.py
repos/tgo-ai/app/runtime/supervisor/teams/: __init__.py  builder.py  runner.py
repos/tgo-ai/app/runtime/supervisor/utils/: __init__.py
repos/tgo-ai/app/runtime/tools/: models.py  utils.py
repos/tgo-ai/app/runtime/tools/builder/: agent_builder.py
repos/tgo-ai/app/runtime/tools/custom/: __init__.py  base.py  handoff.py  user_info.py  user_sentiment.py  user_tag.py  visitor_info.py
repos/tgo-ai/app/schemas/: __init__.py  agent.py  agent_run.py  chat.py  error.py  llm_model.py  llm_provider.py  tool.py
repos/tgo-ai/app/services/: __init__.py  agent_runtime_rules.py  agent_service.py  api_service.py  chat_service.py  llm_model_service.py  llm_provider_service.py  tool_executor.py
repos/tgo-ai/app/ui_templates/: tools.py
repos/tgo-ai/docs/: internal_api.json
repos/tgo-ai/migrations/versions/: 0001_baseline.py  0002_remove_llm_provider_alias_unique.py  af2b3c4d5e6f_add_config_to_ai_teams.py  b6e7d8c9a0b1_update_agno_memory_schema.py  c1d2e3f4g5h6_add_llm_provider_default_model.py  d1e2f3g4h5i6_add_llm_models_table.py  e7f8g9h0i1j2_add_tool_title_fields.py  f1g2h3i4j5k6_rename_toolstore_to_store.py  g1h2i3j4k5l6_add_agent_category.py  h1i2j3k4l5m6_add_bound_device_id.py  j2k3l4m5n6o7_backfill_agent_runtime_fields.py  k3l4m5n6o7p8_drop_team_surfaces.py
repos/tgo-ai/scripts/: seed_device_control_tool.py
repos/tgo-ai/tests/: conftest.py  test_agent_migration_rules.py  test_agent_runtime_rules.py  test_agent_streaming.py  test_custom_tool_context.py  test_custom_tool_event_client.py  test_dependency_injection.py  test_supervisor_agent_runner.py  test_supervisor_runtime_service.py  test_team_surface_removal.py  test_user_info_tool.py
repos/tgo-device-control/: .env.example  Dockerfile  Dockerfile.agentos  README.md  alembic.ini  pyproject.toml
repos/tgo-device-control/alembic/: env.py
repos/tgo-device-control/alembic/versions/: 0001_init_device_control.py  0002_remove_bind_code.py  0003_add_device_model_config.py
repos/tgo-device-control/app/: __init__.py  agent_os.py  agentos_server.py  config.py  main.py
repos/tgo-device-control/app/api/: __init__.py  websocket.py
repos/tgo-device-control/app/api/v1/: __init__.py  agent.py  devices.py  mcp.py
repos/tgo-device-control/app/core/: __init__.py  database.py  logging.py
repos/tgo-device-control/app/models/: __init__.py  device.py
repos/tgo-device-control/app/schemas/: __init__.py  agent_events.py  agentos.py  device.py  mcp.py  tcp_rpc.py
repos/tgo-device-control/app/services/: __init__.py  bind_code_service.py  device_manager.py  device_service.py  mcp_server.py  tcp_connection_manager.py  tcp_rpc_server.py  websocket_server.py
repos/tgo-device-control/app/services/computer_use/: __init__.py  instructions.py  mcp_agent.py
repos/tgo-device-control/docs/: API_REFERENCE.md  DESKTOP_CLIENT_PROTOCOL.md  json-rpc.md
repos/tgo-rag/: DEBUG_WARNING_LOGS.md  Dockerfile  pyproject.toml
repos/tgo-rag/docs/: LOGGING.md  LOGGING_REFACTOR_SUMMARY.md  LOGGING_STDLIB_REFACTOR.md
repos/tgo-rag/migrations/versions/: 0001_baseline.py  0002_add_website_crawl_tables.py  0003_add_collection_type.py  0004_fix_collection_type_enum_values.py  0005_remove_project_fk_from_website_tables.py  0006_add_collection_id_to_website_pages.py  0007_add_qa_pairs_table.py  32097dc45147_add_pg_trgm.py
repos/tgo-rag/src/rag_service/: config.py  database.py  dev_utils.py  logging_config.py  main.py  startup_banner.py
repos/tgo-rag/src/rag_service/auth/: dependencies.py  security.py
repos/tgo-rag/src/rag_service/models/: __init__.py  collections.py  documents.py  qa.py  websites.py
repos/tgo-rag/src/rag_service/routers/: __init__.py  collections.py  embedding_config.py  files.py  qa.py  websites.py
repos/tgo-rag/src/rag_service/schemas/: __init__.py  collections.py  qa.py  websites.py
repos/tgo-rag/src/rag_service/services/: crawler.py  embedding.py  search.py  vector_store.py
repos/tgo-rag/src/rag_service/tasks/: __init__.py  celery_app.py  document_chunking.py  document_embedding.py  document_loaders.py  document_processing.py  document_processing_core.py  document_processing_errors.py  maintenance.py  qa_processing.py  website_crawling.py
scripts/: generate-nginx-config.sh  setup-ssl.sh  test-dev-environment.sh  test-frontend-runtime-config.sh  test-port-exposure.sh
website/: README.md  (+4 more)
(+693 files in other folders)
