[tool.poetry]
name = "tgo-rag-service"
version = "0.1.0"
description = "TGO-Tech RAG (Retrieval-Augmented Generation) Service"
authors = ["TGO-Tech Team <tech@tgo-tech.com>"]
readme = "README.md"
packages = [{include = "rag_service", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
# FastAPI and web framework
fastapi = "^0.122.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
python-multipart = "^0.0.6"
# Database
sqlalchemy = "^2.0.23"
asyncpg = "^0.30.0"
psycopg = {extras = ["binary"], version = "^3.1.0"}
greenlet = "^3.0.0"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"
# Configuration and validation
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
# Authentication (API key based)
# Removed JWT dependencies: python-jose, passlib
# LangChain and AI
langchain = "^0.3.27"
langchain-community = "^0.3.27"
langchain-postgres = "^0.0.15"
langchain-openai = "^0.3.30"
openai = "^1.0.0"
# Vector database
pgvector = "^0.2.4"
# Task queue and caching
redis = "^5.0.1"
celery = "^5.3.4"
# File handling
aiofiles = "^25.1.0"
python-magic = "^0.4.27"
# Document processing
unstructured = {extras = ["docx"], version = "^0.18.13"}
docx2txt = "^0.8"  # Fallback for Word document loading
# HTTP client
httpx = {extras = ["socks"], version = "^0.28.1"}
socksio = "^1.0.0"
# Web crawling
crawl4ai = "^0.7.7"
# Monitoring and logging
prometheus-client = "^0.19.0"
structlog = "^23.2.0"
# Environment
python-dotenv = "^1.0.0"
flower = "^2.0.1"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-xdist = "^3.5.0"
factory-boy = "^3.3.0"
testcontainers = "^3.7.1"
# Code quality
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
pre-commit = "^3.6.0"
# Development tools

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["rag_service"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "langchain.*",
    "langchain_community.*",
    "langchain_postgres.*",
    "langchain_openai.*",
    "pgvector.*",
    "testcontainers.*",
    "magic.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/rag_service",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/rag_service"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
